--- a/react-project-2/src/App.css
+++ b/react-project-2/src/App.css
@@ -1,10 +1,15 @@
-#root {
-  max-width: 1280px;
+body {
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
 .player {
   /* border: 2px solid yellow; */
+}
+#game {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
