--- a/react-project-2/src/App.css
+++ b/react-project-2/src/App.css
@@ -1,12 +1,11 @@
 body {
-  /* max-width: 1280px; */
   margin: 0 auto;
-  /* padding: 2rem; */
+
   text-align: center;
 }
 
 .player {
-  /* border: 2px solid yellow; */
+  border: 2px solid black;
 }
 #game {
   display: flex;
